<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.example.andela.pronotes.fragments.EditNoteFragment">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.andela.pronotes.activities.CreateNewNote">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/notebookName_hint"
                android:maxLength="50"
                android:inputType="textCapSentences"
                android:id="@+id/create_note_notebook"
                android:layout_marginRight="30dp"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:maxLength="50"
                android:inputType="textCapSentences"
                android:hint="@string/noteBookTag_hint"
                android:id="@+id/create_note_tag"/>
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:hint="@string/noteTitle_hint"
            android:id="@+id/note_title"/>

        <com.example.andela.pronotes.utils.LinedEditTextView
            android:id="@+id/createnotebook_line"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:capitalize="sentences"
            android:gravity="top"
            android:hint="@string/noteContent_hint"
            android:inputType="textCapSentences|textMultiLine"
            android:scrollbars="vertical"
            android:textSize="24dp"/>
    </LinearLayout>


</FrameLayout>
