...
                android:textColor="@color/textColorSecondary"/>
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rv"/>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabbutt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:src="@android:drawable/ic_input_add"
        android:clickable="true"/>
...
