<?xml version="1.0" encoding="utf-8"?>
 <menu
        xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/edit"
          android:icon="@android:drawable/ic_menu_edit"
          android:title="@string/edit_note"/>

    <item android:id="@+id/trash_note"
          android:icon="@android:drawable/ic_menu_delete"
          android:title="@string/Trash"/>

</menu>